[package]
name = "pkg-latest"
version = "0.1.0"
edition = "2024"
description = "Resolve latest versions of npm and jsr packages"
license = "MIT"
repository = "https://github.com/yourusername/pkg-latest"
keywords = ["npm", "jsr", "deno", "version", "package"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "latest"
path = "src/main.rs"

[dependencies]
ureq = { version = "3.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
